fixed welcome message styling, was off center

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -264,6 +264,12 @@ h1 a {
   color: rgba(96, 163, 188,1.0);
 }
 
+.c4 .welcome {
+  margin-left: -.4em;
+  color: rgba(10, 61, 98,1.0);
+  font-weight: bold;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+}
 
 /* FORM BUTTON STYLING  */
 input[type=submit] {
